test/Fail/Issue3436.err
Issue3436.agda:10.1-2: error: [MissingDefinitions]
The following names are declared but lack a definition:
D
